--- a/config.yaml
+++ b/config.yaml
@@ -39,3 +39,10 @@ params:
 
   # Background image of the landing page
   background: /images/site/background.jpg
+
+  # The inverted logo will be used in the initial transparent navbar and
+  # the main logo will be used in the non-transparent navbar.
+  logo:
+    main: images/main-logo.png
+    inverted: images/inverted-logo.png
+    favicon: images/favicon.png
