Changing name presented for a short version

--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -1,5 +1,5 @@
 # Copyright Notice
-copyright: © 2021 Manuel José Santos Oliveira All Rights Reserved. Copyright.
+copyright: © 2021 Manuel Oliveira All Rights Reserved. Copyright.
 
 # A disclaimer notice for the footer. Make sure you have set "params.footer.disclaimer.enable: true" in your `config.yaml` file.
 disclaimer: "This theme is under MIT license. So, you can use it for non-commercial, commercial, or private uses.
@@ -7,7 +7,7 @@ You can modify or distribute the theme without requiring any permission from the
 However, the theme author does not provide any warranty or takes any liability for any issue with the theme."
 
 # Meta description for your site.  This will help the search engines to find your site.
-description: Portfolio and personal website of Manuel José Santos Oliveira.
+description: Portfolio and personal website of Manuel Oliveira.
 # Meta description for your site.  This will help the search engines to find your site.
 keywords: Manuel, Manuel Santos Oliveira, Manuel José Santos Oliveira, FEUP, Engenharia Electrotécnica e de Computadores, Microeletrónica e Sistemas Embarcados, Electrical and Computers Engineering, Microelectronics, ASIC, FPGA, Verilog, SystemVerilog
 
@@ -19,8 +19,8 @@ keywords: Manuel, Manuel Santos Oliveira, Manuel José Santos Oliveira, FEUP, En
 
 # Specify OpenGraph Headers
 openGraph:
-  title: Manuel José Santos Oliveira
+  title: Manuel Oliveira
   type: website
-  description: Portfolio and personal website of Manuel José Santos Oliveira.
+  description: Portfolio and personal website of Manuel Oliveira.
   image: images/author/profile.jpg
   url: https://hugo-toha.github.io
