--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,6 +1,6 @@
 # some information about you
 name: "Manuel Oliveira"
-nickname: "Manuel Oliveira"
+nickname: "Manuel"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
 image: "images/author/profile.jpg"
