--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -53,7 +53,7 @@ experiences:
     location: Porto, Portugal
     overview: The Faculty of Engineering of the University of Porto undertakes activities in the realms of education, research, and innovation at an international level. Accordingly, the results of these activities lead to the creation and transmission of knowledge, training of competent and ethical professionals, and future leaders in the area of engineering and similar areas, and also the promotion of wellbeing of our global society.
   positions:
-  - designation: Invited Assistant
+  - designation: Invited Teaching Assistant
     start: Jul 2015
     end: Sep 2014
     responsibilities:
