--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -9,22 +9,32 @@ section:
   # hideTitle: true
 
 # Your Skills.
-# Give a summary of you each skill in the summary section.
+# Give a summary of you each skills in the summary section.
 skills:
 - name: SystemVerilog
   logo: /images/sections/skills/SystemVerilog.png
-  summary: "Capable of implementing, mantainning RTL written into SystemVerilog. Experienced in writing RTL modules in SystemVerilog to integrate Synopsys PCIe Digital Controller solution."
+  summary: "Capable of implementing, maintaining RTL written into SystemVerilog. Experienced in writing RTL modules in SystemVerilog to integrate Synopsys PCIe Digital Controller solution."
   url: "https://ieeexplore.ieee.org/document/8299595"
 
 - name: Python
   logo: /images/sections/skills/Python.png
-  summary: "Using as the main language to developed auxiliar tools and scripts to automate tasks."
+  summary: "Using as the main language to develop auxiliary tools and scripts to automate tasks."
   url: "https://www.python.org"
 
 - name: Perforce
   logo: /images/sections/skills/Perforce.jpg
   summary: "Experienced with git-based (Perforce) development."
   url: "https://www.perforce.com/"
+
+- name: Git
+  logo: /images/sections/skills/git.jpg
+  summary: "Experienced with git-based development."
+  url: "https://git-scm.com/"
+
+- name: GitLab
+  logo: /images/sections/skills/gitlab.jpg
+  summary: "Experienced with the SDLC (software development lifecycle) platform."
+  url: "https://git-scm.com/"
 
 - name: Jira
   logo: "/images/sections/skills/Jira.png"
