--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,7 +8,7 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Senior SoC Digital Designer
+designation: Staff Silicon Logical Design Engineer
 # your company information
 company:
   name: Axelera AI
