--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -11,8 +11,8 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a ASIC Digital Designer
-  - I work with Hardware description languages
-  - I work with SystemVerilog for Design
-  - I work with Verilog for Design
-  - I love to work with inovation
+  - Logic Design Expert
+  - Formal Verification Enthusiast
+  - Tech Leader
+  - Invited Teaching Assistant
+  - Crafting Innovation
