Update summary and core expertise formatting in about.yaml

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -18,31 +18,31 @@ company:
 resume: "files/ManuelOliveira_CV_20230327.pdf"
 
 # a summary about you
-summary: '*Chip design leader with 10+ years of experience architecting next-generation semiconductor solutions*, currently driving AI processor development as 
+summary: "**Chip design leader with 10+ years of experience architecting next-generation semiconductor solutions**, currently driving AI processor development as 
 Staff Silicon Logical Design Engineer at Axelera AI.
 
 From my foundations as an intern at Synopsys to technical leadership roles, I've cultivated deep expertise in *RTL design, formal verification, and SoC integration* — 
 transforming complex specifications into high-performance silicon that powers tomorrow's intelligent systems.
 
-At Axelera AI, I lead cross-functional teams developing breakthrough *AI hardware platforms* that leverage proprietary in-memory computing and RISC-V dataflow technology, 
+At Axelera AI, I lead cross-functional teams developing breakthrough **AI hardware platforms** that leverage proprietary in-memory computing and RISC-V dataflow technology, 
 delivering exceptional performance at a fraction of traditional power consumption. My work spans the complete product lifecycle: from micro-architecture definition and 
 scalable RTL implementation to formal verification and silicon validation.
 
-*Core expertise*:
+**Core expertise**:
 
-- Advanced RTL design in SystemVerilog for high-performance, area-optimized implementations
+- Advanced RTL design in SystemVerilog for high-performance, area-optimised implementations
 - Formal verification strategies ensuring mathematical proof of design correctness
 - Complex SoC integration across diverse IP portfolios with rigorous timing and power management
 - Intelligent automation frameworks and Python-based tooling that accelerate development cycles
 - Technical leadership and mentorship, cultivating engineering talent from interns to senior team members
 
-Beyond industry work, I serve as *Invited Teaching Assistant* at the Faculty of Engineering, University of Porto, sharing knowledge in Computer Architecture and shaping 
+Beyond industry work, I serve as an **Invited Teaching Assistant** at the Faculty of Engineering, University of Porto, sharing knowledge in Computer Architecture and shaping 
 the next generation of hardware engineers.
 
 My approach combines technical precision with strategic vision—designing silicon architectures that don't just meet specifications, but push the boundaries of what's 
 possible in AI acceleration.
 
-> "Transforming visionary concepts into silicon reality, one design at a time."'
+> \"Transforming visionary concepts into silicon reality, one design at a time.\"|
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
