Fix formatting issue in about.yaml

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -42,7 +42,7 @@ the next generation of hardware engineers.
 My approach combines technical precision with strategic vision—designing silicon architectures that don't just meet specifications, but push the boundaries of what's 
 possible in AI acceleration.
 
-> \"Transforming visionary concepts into silicon reality, one design at a time.\"|
+> \"Transforming visionary concepts into silicon reality, one design at a time.\""
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
