--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -22,7 +22,7 @@ summary: "**Chip design leader with 10+ years of experience architecting next-ge
 Staff Silicon Logical Design Engineer at Axelera AI.
 
 
-From my foundations as an intern at Synopsys to technical leadership roles, I've cultivated deep expertise in *RTL design, formal verification, and SoC integration* — 
+From my foundations as an intern at Synopsys to technical leadership roles, I've cultivated deep expertise in **RTL design, formal verification, and SoC integration** — 
 transforming complex specifications into high-performance silicon that powers tomorrow's intelligent systems.
 
 
