--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,9 @@
   "build": {
     "env": {
       "HUGO_VERSION": "0.152.2",
-      "GO_VERSION": "1.25.3",
       "NODE_VERSION": "22.x"
     }
   },
-  "installCommand": "npm install && hugo mod get",
   "buildCommand": "hugo --gc --minify",
-  "outputDirectory": "public",
-  "framework": null
+  "outputDirectory": "public"
 }
