--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
+  "framework": "hugo",
   "build": {
     "env": {
-      "HUGO_VERSION": "0.152.2",
-      "NODE_VERSION": "22.x"
+      "HUGO_VERSION": "0.152.2"
     }
-  },
-  "buildCommand": "hugo --gc --minify",
-  "outputDirectory": "public"
+  }
 }
